--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -34,23 +34,12 @@
       
           <!-- Links -->
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/authors">Authors
+              <% nav.forEach(function(nav){ %>
+                <li class="nav-item active"></li>
+                <a class="nav-link" href="<%= nav.link %>"><%= nav.title %></a>
                 <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/books">Books</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/books/addbook">Add Book</a>
-            </li>
-            <li class="nav-item active">
-                  <a class="nav-link" href="/authors/addauthor">Add Author</a>
-            </li>
-
-    
-      
+              </li>
+              <% }) %>
           </ul>
           <!-- Links -->
       
